# pytorch_train

./: README.md
classification/: cross_validatoin.py  demo.py  eval.py
classification/config/: default_config.py  robbin_break_topborder_dual_resnet18.yml  robbin_break_topborder_dual_resnet50.yml  robbin_break_topborder_resnet18.yml  stain_bottom_resnet18.yml  stain_bottom_resnet50.yml
classification/data/: default_dataset.py  robbin_break_topborder.py  stain_bottom.py
classification/example/: README.md  demo.sh  dty_tail_refine.yml  eval.sh  onnx.sh  train.sh
detection/fcos/: INSTALL.md  README.md  setup.py
detection/fcos/fcos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
detection/fcos/tools/: test_net.py  train_net.py
detection/yolov5/: Facevisa_convert_v2.py  Facevisa_dect.sh  Facevisa_makedata.py  Facevisa_test.sh  Facevisa_train.sh  Facevisa_visAnalysis.sh  README.md  detect.py  test.py  train.py  vis_analysis.py
detection/yolov5/data/: hyp.finetune.yaml  hyp.scratch.yaml  stain.yaml
detection/yolov5_oriented/: README.md  changeonnx.py  detect.py  detection.sh  export.py  pth2onnx.sh  test.sh  train.py  train.sh  val.py
detection/yolov5_tag7/: README.md  demo_onnx.py  detect.py  export.py  train.py
detection/yolox/: README.md  demo.sh  evaluation.sh  pth2trt.sh  requirements.txt  setup.py  test_onnx.sh  train.sh  train_coco.sh  transform_to_onnx.sh
detection/yolox/demo/TensorRT/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
segment/unet/: README.md  config.py  eval.py  model2json.py  predict.py  train.py
(+155 files in other folders)
